# RealTimeCompetitorStrategyTracker

./: .gitignore  Ascrape_review.py  Ascraping.py  README.md  amazon_cookies.pkl  amazon_reviews_B0CS69DGSW_20251114_123244.xlsx  forecasting_model.py  prediction.py  product_reviews_combined_B0CS69DGSW_20251114_175101.xlsx  pyproject.toml  requirements.txt  samsung-galaxy-s24-5g-ai-smartphone-marble-gray-8gb-128gb-storage_amazon_price_history.csv  save_cookies.py  scraping_new.py
Old_Scraping_files/: samsung_galaxy_s23_price_history.csv  samsung_galaxy_s24_5g_reviews_only.csv  samsung_galaxy_s24_price_history.csv  samsung_galaxy_s25_5g_reviews.csv  scrape_reviews.py  scrapingN.py  scrapingN1.py  scrapingN2.py  scraping_final.py
Scraping/: amazon_product_selenium.csv  amazon_products_laptops.csv  web_scraping.py
Scraping/Scraping/: amazon_products_laptops.csv
files/: amazon_product_B0CS69DGSW_20251114_161833.xlsx  amazon_product_B0CS69DGSW_20251114_162742.xlsx  product_reviews_combined_B0CS69DGSW_20251114_172722.xlsx  product_reviews_combined_B0CS69DGSW_20251114_175910.xlsx  product_reviews_combined_B0CS69DGSW_20251114_182630.xlsx  product_reviews_combined_B0CS69DGSW_20251114_184108.xlsx  product_reviews_combined_B0CS69DGSW_20251114_184745.xlsx  product_reviews_combined_B0CS69DGSW_20251114_185531.xlsx
output/: na_metadata.csv  samsung_galaxy_s24_5g_full_data.csv
price_history/: samsung_galaxy_s24_5g_ai_smartphone_marble_gray_8gb_128gb_storage_price_history.csv
