[project]
name = "web-scraping-infosys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=7.0.1",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
