[project]
name = "web-scraping-infosys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ipykernel>=7.0.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scikit-learn==1.7.2",
    "selenium>=4.38.0",
    "tensorflow==2.20.0",
    "webdriver-manager>=4.0.2",
]
